--- a/RayTracerSmall/RayTracerSmall.vcxproj
+++ b/RayTracerSmall/RayTracerSmall.vcxproj
@@ -142,7 +142,34 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Chunk.cpp" />
+    <ClCompile Include="Debugger.cpp" />
+    <ClCompile Include="GlobalOverides.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="MemoryManager.cpp" />
+    <ClCompile Include="MemoryPool.cpp" />
+    <ClCompile Include="RenderingEngine.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="sphere.cpp" />
+    <ClCompile Include="Timing.cpp" />
+    <ClCompile Include="UI.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Chunk.h" />
+    <ClInclude Include="Debugger.h" />
+    <ClInclude Include="definitions.h" />
+    <ClInclude Include="GlobalOverides.h" />
+    <ClInclude Include="Json.hpp" />
+    <ClInclude Include="MemoryManager.h" />
+    <ClInclude Include="MemoryPool.h" />
+    <ClInclude Include="MenuOption.h" />
+    <ClInclude Include="RenderingEngine.h" />
+    <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="sphere.h" />
+    <ClInclude Include="Timing.h" />
+    <ClInclude Include="UI.h" />
+    <ClInclude Include="VecTemplate.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
